--- a/SecretStudentVotingScheme/pom.xml
+++ b/SecretStudentVotingScheme/pom.xml
@@ -20,6 +20,12 @@
             <artifactId>aspectjrt</artifactId>
             <version>1.9.20.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>RELEASE</version>
+            <scope>compile</scope>
+        </dependency>
 
     </dependencies>
     <build>
