--- a/SecretStudentVotingScheme/pom.xml
+++ b/SecretStudentVotingScheme/pom.xml
@@ -20,6 +20,11 @@
             <artifactId>aspectjrt</artifactId>
             <version>1.9.20.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.12.0</version>
+        </dependency>
 
     </dependencies>
     <build>
